(hopefully) Fixed the orizzontal scroll on mobile

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -9,6 +9,7 @@
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+  touch-action: pan-y;
 }
 
 body {
